--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 
     /* Hero Section */
     header {
-      background: linear-gradient(rgba(46, 125, 50, 0.8), rgba(46, 125, 50, 0.8)), url('img/hero-bg.jpg') no-repeat center/cover;
+      background: linear-gradient(rgba(46, 125, 50, 0.8), rgba(46, 125, 50, 0.8)), url('hero-bg.jpg') no-repeat center/cover;
       color: white;
       text-align: center;
       padding: 90px 20px;
       border-radius: 0 0 20px 20px;
     }
     header h1 {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       margin-bottom: 10px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       opacity: 0.9;
     }
 
@@ -80,6 +80,7 @@
       background: #ffffff;
       border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      flex-wrap: wrap;
     }
     #about img {
       width: 260px;
@@ -88,9 +89,11 @@
       border-radius: 50%;
       border: 5px solid #2e7d32;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      margin: auto;
     }
     #about-text {
       flex: 1;
+      min-width: 250px;
     }
     #about h2 {
       color: #2e7d32;
@@ -186,6 +189,32 @@
     .contact-buttons a:hover {
       transform: scale(1.1);
     }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      nav ul li {
+        display: block;
+        margin: 10px 0;
+      }
+      #about {
+        flex-direction: column;
+        text-align: center;
+      }
+      #about img {
+        width: 180px;
+        height: 180px;
+      }
+      header h1 {
+        font-size: 2rem;
+      }
+      header p {
+        font-size: 1rem;
+      }
+      blockquote {
+        font-size: 0.95rem;
+        padding: 12px;
+      }
+    }
   </style>
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -207,7 +236,7 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="img/im133.jpg" alt="Tanya's Photo">
+    <img src="im133.jpg" alt="My Photo">
     <div id="about-text">
       <h2>About Me</h2>
       <p>
@@ -236,10 +265,7 @@
   <!-- Floating Contact Buttons -->
   <div class="contact-buttons">
     <a href="https://wa.me/2349134955820" target="_blank"><i class="fab fa-whatsapp"></i></a>
-   <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ochanyafaith24@gmail.com" target="_blank" class="email">
-  <i class="fas fa-envelope"></i>
-</a>
-
+    <a href="mailto:ochanyafaith24@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
   </div>
 
   <!-- Footer -->
