--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="img/im133.jpg" alt="My Photo">
+    <img src="im133.jpg" alt="My Photo">
     <div id="about-text">
       <h2>About Me</h2>
       <p>
@@ -309,3 +309,4 @@
   </footer>
 </body>
 </html>
+
