--- a/index.html
+++ b/index.html
@@ -142,6 +142,39 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
+    /* Contact Section */
+    #contact {
+      background: #ffffff;
+      padding: 60px 20px;
+      margin: 40px auto;
+      max-width: 1000px;
+      text-align: center;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    #contact h2 {
+      color: #2e7d32;
+      margin-bottom: 20px;
+    }
+    #contact p {
+      margin-bottom: 20px;
+    }
+    #contact a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 25px;
+      border-radius: 8px;
+      background: #2e7d32;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
+    }
+    #contact a:hover {
+      background: #1b5e20;
+      transform: translateY(-2px);
+    }
+
     /* Footer */
     footer {
       background: #2e7d32;
@@ -222,6 +255,7 @@
     <ul>
       <li><a href="#about">About Me</a></li>
       <li><a href="#quotes">Quotes</a></li>
+      <li><a href="#contact">Get in Touch</a></li>
     </ul>
   </nav>
 
@@ -235,13 +269,30 @@
   <section id="about">
     <img src="img/im133.jpg" alt="My Photo">
     <div id="about-text">
-      <h2>About Me</h2>
+      <h2>🌈 About Me 🌈</h2>
       <p>
-        I’m Daniel-Ukpoju Ochanya Faith, a Computer Science student at the University of Abuja.  
-        I’m passionate about programming and using code to solve real-world problems.  
-        Beyond coding, I love cooking and dream of becoming a professional chef. 🍲
+        👋 Hi, I’m <strong>Daniel-Ukpoju Ochanya Faith</strong>, You can call me Gentleme🌸, and I'm from  
+        <span style="color:#2e7d32;">Otukpo Local Government, Benue State</span>.  
       </p>
-      <a href="readmore.html" class="read-more">Read My Story ➝</a>
+      <p>
+        🌟 I’m the last baby in of the house, and my siblings lovingly call me  
+        <span style="font-style:italic; color:#ff4081;">“Mummy’s Handbag” 💼💖</span>.
+      </p>
+      <p>
+        🎓 Currently, I’m a <strong>Computer Science student</strong> at the University of Abuja.  
+        I’m super passionate about <span style="color:#4caf50;">programming 💻✨</span>  
+        and love solving real-world problems with code.
+      </p>
+      <p>
+        🍲 Beyond coding, I absolutely love <strong>cooking</strong> —  
+        and one of my biggest dreams is to become a professional chef someday 👩‍🍳🌸.  
+        Cooking for me means spreading love, joy, and happiness through food ❤️.
+      </p>
+      <p style="font-size:1.1rem; text-align:center; margin-top:15px;">
+        🌍💚 My goal: Use <strong>technology</strong>, <strong>kindness</strong>, and <strong>creativity</strong>  
+        to make the world a better place 🌟.
+      </p>
+      <a href="readmore.html" class="read-more">✨ Read My Story ➝ ✨</a>
     </div>
   </section>
 
@@ -259,10 +310,17 @@
     <blockquote>“Start where you are. Use what you have. Do what you can.”</blockquote>
   </section>
 
-  <!-- Floating Contact Buttons -->
-  <div class="contact-buttons">
-    <a href="https://wa.me/2349134955820" target="_blank"><i class="fab fa-whatsapp"></i></a>
-    <a href="mailto:ochanyafaith24@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>📩 Get in Touch</h2>
+    <p>If you'd like to reach out to me, feel free to contact me directly:</p>
+    <a href="https://wa.me/2349134955820" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ochanyafaith24@gm_blankail.com" target="" class="email"></i> Email Me</a>
+ 
+</a>
+  </section>
+
+
   </div>
 
   <!-- Footer -->
