--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tanya Faye - Personal Website</title>
+  <title>Gentleme - Personal Website</title>
   <style>
     /* General Reset */
     * {
@@ -267,7 +267,7 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="img/im133.jpg" alt="My Photo">
+    <img src="im133.jpg" alt="My Photo">
     <div id="about-text">
       <h2>🌈 About Me 🌈</h2>
       <p>
@@ -332,3 +332,4 @@
   </footer>
 </body>
 </html>
+
