--- a/readmore.html
+++ b/readmore.html
@@ -18,6 +18,7 @@
       color: #333;
       line-height: 1.8;
       font-size: 16px;
+      scroll-behavior: smooth;
     }
 
     /* Navbar */
@@ -48,6 +49,24 @@
     nav ul li a:hover {
       color: #ffeb3b;
       border-bottom: 2px solid #ffeb3b;
+    }
+
+    /* Hero Section */
+    header {
+      background: linear-gradient(rgba(46, 125, 50, 0.8), rgba(46, 125, 50, 0.8)), url('img/hero-bg.jpg') no-repeat center/cover;
+      color: white;
+      text-align: center;
+      padding: 90px 20px;
+      border-radius: 0 0 20px 20px;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    }
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.9;
     }
 
     /* Story Section */
@@ -112,32 +131,56 @@
     </ul>
   </nav>
 
+  <!-- Hero Section -->
+  <header>
+    <h1>📖 My Full Story</h1>
+    <p>Here’s a deeper look into my journey 🌸✨</p>
+  </header>
+
   <!-- About Me Story -->
   <section class="story">
     <h2>🌸 My Story</h2>
+
+    <!-- Intro (same as index) -->
     <p>
-      Hello, my name is Daniel-Ukpoju Ochanya Faith — You can call me Gentleme🌸. I’m a proud third-year Computer Science student at the University of Abuja.  
-      I have a deep passion for programming because I believe technology has the power to change lives and solve real-world problems.  
+      👋 Hi, I’m <strong>Daniel-Ukpoju Ochanya Faith</strong>, You can call me Gentleme🌸, and I'm from  
+        <span style="color:#2e7d32;">Otukpo Local Government, Benue State</span>.  
+      </p>
+      <p>
+        🌟 I’m the last baby in of the house, and my siblings lovingly call me  
+        <span style="font-style:italic; color:#ff4081;">“Mummy’s Handbag” 💼💖</span>.
+      </p>
+      <p>
+    <p>
+      🎓 Currently, I’m a <strong>Computer Science student</strong> at the University of Abuja.  
+      I’m super passionate about <span style="color:#4caf50;">programming 💻✨</span>  
+      and love solving real-world problems with code.
+    </p>
+    <p>
+      🍲 Beyond coding, I absolutely love <strong>cooking</strong> —  
+      and one of my biggest dreams is to become a professional chef someday 👩‍🍳🌸.  
+      Cooking for me means spreading love, joy, and happiness through food ❤️.
+    </p>
+    <p style="font-size:1.1rem; text-align:center; margin-top:15px;">
+      🌍💚 My goal: Use <strong>technology</strong>, <strong>kindness</strong>, and <strong>creativity</strong>  
+      to make the world a better place 🌟.
     </p>
 
+    <!-- Continue Full Story -->
     <p>
-      But I’m not just about computers and code. I also love cooking and dream of becoming a professional chef one day 🍳. 
-      For me, cooking is a way of spreading love, joy, and comfort. Another big part of my heart is giving back — I dream of becoming a philanthropist and building a <strong>free healthcare center</strong> for my community. 
+      But I’m not just about computers and code. I also dream of becoming a philanthropist and building a <strong>free healthcare center</strong> for my community.  
       I want a world where everyone — rich or poor — can receive medical attention without worrying about money.  
     </p>
-
     <p>
       Growing up wasn’t easy. Life has been tough, but those challenges shaped me into who I am today.  
       I know what it feels like to struggle, and that’s why I want children and the less privileged to know this truth:  
       <em>“You are not alone. Your voice matters. You can rise and be heard.”</em>  
     </p>
-
     <p>
       With programming, I’ve already started solving problems. At my school, students often struggle to get access to learning materials.  
       To help, I developed a <strong>Material Portal</strong> — a website where students can log in and download resources easily for free without paying a dime.  
       It’s not live yet because I need funds to host it properly, but I’m determined to make it a reality soon.  
     </p>
-
     <p>
       This is just the beginning of my journey. I want to build, create, and inspire. Whether through code, food, or kindness,  
       my goal is simple: <strong>to leave this world better than I found it</strong>. 🌍✨
