--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="im133.jpg" alt="My Photo">
+    <img src="my_website/im133.jpg" alt="My Photo">
     <div id="about-text">
       <h2>🌈 About Me 🌈</h2>
       <p>
@@ -332,4 +332,5 @@
   </footer>
 </body>
 </html>
+
 
