--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="my_website/im133.jpg" alt="My Photo">
+   <img src="https://gentlemee.github.io/my_website/img/im133.jpg" alt="My Photo">
+
     <div id="about-text">
       <h2>🌈 About Me 🌈</h2>
       <p>
@@ -332,5 +333,6 @@
   </footer>
 </body>
 </html>
+
 
 
