--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   <!-- About Section -->
   <section id="about">
-   <img src="https://gentlemee.github.io/my_website/img/im133.jpg" alt="My Photo">
+   <img src="https://gentlemee.github.io/my_website/im133.jpg" alt="My Photo">
 
     <div id="about-text">
       <h2>🌈 About Me 🌈</h2>
@@ -333,6 +333,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
