--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <span style="color:#2e7d32;">Otukpo Local Government, Benue State</span>.  
       </p>
       <p>
-        🌟 I’m the last baby in of the house, and my siblings lovingly call me  
+        🌟 I’m the last baby of the house, and my siblings lovingly call me  
         <span style="font-style:italic; color:#ff4081;">“Mummy’s Handbag” 💼💖</span>.
       </p>
       <p>
@@ -333,6 +333,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
