--- a/readmore.html
+++ b/readmore.html
@@ -147,7 +147,7 @@
         <span style="color:#2e7d32;">Otukpo Local Government, Benue State</span>.  
       </p>
       <p>
-        🌟 I’m the last baby in of the house, and my siblings lovingly call me  
+        🌟 I’m the last baby of the house, and my siblings lovingly call me  
         <span style="font-style:italic; color:#ff4081;">“Mummy’s Handbag” 💼💖</span>.
       </p>
       <p>
@@ -171,10 +171,9 @@
       But I’m not just about computers and code. I also dream of becoming a philanthropist and building a <strong>free healthcare center</strong> for my community.  
       I want a world where everyone — rich or poor — can receive medical attention without worrying about money.  
     </p>
-    <p>
-      Growing up wasn’t easy. Life has been tough, but those challenges shaped me into who I am today.  
-      I know what it feels like to struggle, and that’s why I want children and the less privileged to know this truth:  
-      <em>“You are not alone. Your voice matters. You can rise and be heard.”</em>  
+    <p>Growing up was a journey full of lessons and discoveries. Life taught me resilience, and those experiences shaped the person I am today.
+I understand the value of support and encouragement, which is why I want children and the less privileged to hear this truth:
+<em>“You are capable. Your dreams matter. Keep believing, and you will shine.”</em>  
     </p>
     <p>
       With programming, I’ve already started solving problems. At my school, students often struggle to get access to learning materials.  
@@ -198,3 +197,4 @@
   </footer>
 </body>
 </html>
+
